force-app/main/default/objects/Time_Entry__c/fields/Date_Worked__c.field-meta.xml
<CustomField>
    <fullName>Date_Worked__c</fullName>
    <label>Date Worked</label>
    <type>Date</type>
</CustomField>