force-app/main/default/objects/Time_Entry__c/fields/Days_Pass_Time_Worked__c.field-meta.xml
<CustomField>
    <fullName>Days_Pass_Time_Worked__c</fullName>
    <formula>Date_Worked__c - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the number of days past entering a Time Entry from the actual date the time represents</inlineHelpText>
    <label>Days Pass Time Worked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>