force-app/main/default/objects/Time_Entry__c/fields/Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked__c</fullName>
    <inlineHelpText>Time is recorded in quarter hour increments: For one and a half hour, enter 1.50; For one hour and fifteen minutes enter 1.25</inlineHelpText>
    <label>Hours Worked</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>