force-app/main/default/objects/Time_Entry__c/fields/Opportunity_LU__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_LU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity (LU)</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Time Entries (Opportunity (LU))</relationshipLabel>
    <relationshipName>Time_Entries1</relationshipName>
    <type>Lookup</type>
</CustomField>