force-app/main/default/objects/Time_Entry__c/fields/Time_Entry_Status__c.field-meta.xml
<CustomField>
    <fullName>Time_Entry_Status__c</fullName>
    <label>Time Entry Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <default>true</default>
                <label>Planned</label>
            </value>
            <value>
                <fullName>Requires Conformation</fullName>
            </value>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Fulfilled/Ignore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>