force-app/main/default/objects/Time_Entry__c/listViews/Pankaj_Rathod_Time_Entries.listView-meta.xml
<ListView>
    <fullName>Pankaj_Rathod_Time_Entries</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Date_Worked__c</columns>
    <columns>Hours_Worked__c</columns>
    <columns>Time_Entry_Status__c</columns>
    <columns>Days_Pass_Time_Worked__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Rathod</value>
    </filters>
    <label>Pankaj Rathod Time Entries</label>
</ListView>